infrastructure/kubernetes/tenants/excalidraw/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: excalidraw
  namespace: excalidraw
  labels:
    app.kubernetes.io/name: excalidraw
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: excalidraw
  template:
    metadata:
      labels:
        app.kubernetes.io/name: excalidraw
    spec:
      containers:
        - name: excalidraw
          image: excalidraw/excalidraw:latest@sha256:f7ee194addd607bf831d2af0f0a34463dd4225e426cf35199ef0b12a803398e9
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 128Mi
